--- a/Homework/Christian_herrera_HW3.ipynb
+++ b/Homework/Christian_herrera_HW3.ipynb
@@ -1,29 +1,19 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": [],
-   "authorship_tag": "ABX9TyOH2Nx9Gsm/Jw89a333OrCg"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
-   "source": "# **Homework 3. Functions (Questions)**",
    "metadata": {
     "id": "4pykq9yAWMJc"
-   }
+   },
+   "source": [
+    "# **Homework 3. Functions (Questions)**"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "YgKBoUu_0I8E"
+   },
    "source": [
     "# **Assignment Submission Guidelines**\n",
     "\n",
@@ -53,221 +43,261 @@
     "\n",
     "6. **Technical Issues:**\n",
     "   - If you encounter any technical issues with Canvas or your submission, contact the TAs immediately **before the deadline** to avoid penalties."
-   ],
-   "metadata": {
-    "id": "YgKBoUu_0I8E"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# **Questions**"
-   ],
    "metadata": {
     "id": "M6kzDCgY0gSm"
-   }
+   },
+   "source": [
+    "# **Questions**"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "xrVc73_O0hpk"
+   },
    "source": [
     "\n",
     "\n",
     "---\n",
     "\n"
-   ],
-   "metadata": {
-    "id": "xrVc73_O0hpk"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": "**Question 1.** Write a function named add that takes two numbers as arguments and returns their sum. (10 Points)",
    "metadata": {
     "id": "8a9h5DfrT0m-"
-   }
+   },
+   "source": [
+    "**Question 1.** Write a function named add that takes two numbers as arguments and returns their sum. (10 Points)"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ],
+   "execution_count": null,
    "metadata": {
     "id": "W257oIJmT0z_"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The add function. \n",
+    "def add(num_1, num_2):\n",
+    "    return num_1 + num_2\n",
+    "\n",
+    "# Running the function. \n",
+    "add(1, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": "**Question 2.** Write a function named average that takes a list of numbers and returns their average. (10 Points)",
    "metadata": {
     "id": "KGNQ9AjhT069"
-   }
+   },
+   "source": [
+    "**Question 2.** Write a function named average that takes a list of numbers and returns their average. (10 Points)"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ],
+   "execution_count": 3,
    "metadata": {
     "id": "q0avuru9T1C-"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The average function. \n",
+    "def average(*args):\n",
+    "    return sum(args)/len(args)\n",
+    "\n",
+    "# Running the function. \n",
+    "average(5,50)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": "**Question 3.**  Convert a given number of days into a combination of weeks and days. (10 Points)",
    "metadata": {
     "id": "WamtOSO9T1KJ"
-   }
+   },
+   "source": [
+    "**Question 3.**  Convert a given number of days into a combination of weeks and days. (10 Points)"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ],
+   "execution_count": 14,
    "metadata": {
     "id": "zgI6PKNlT1RI"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24 days is equal to 3 weeks and 3 days.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The conversion function. \n",
+    "def days_to_weeks_and_days(days):\n",
+    "    # We will use floor division and the mod operator. \n",
+    "    week_count = days // 7\n",
+    "    leftover_days = days % 7\n",
+    "    # Returning a tuple so we can separately address the values. \n",
+    "    return week_count, leftover_days\n",
+    "\n",
+    "# Making the number of days to convert a variable. \n",
+    "days_to_convert = 24\n",
+    "\n",
+    "# The tuple we will reference in the string. \n",
+    "days_tuple = days_to_weeks_and_days(days_to_convert)\n",
+    "\n",
+    "print(f'{days_to_convert} days is equal to {days_tuple[0]} weeks and {days_tuple[1]} days.')"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": "**Question 4.** Write a function named string_length that takes a string and returns its length without using the built-in len() function. (10 Points)",
    "metadata": {
     "id": "KZEw9z9fT1ZP"
-   }
+   },
+   "source": [
+    "**Question 4.** Write a function named string_length that takes a string and returns its length without using the built-in len() function. (10 Points)"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ],
+   "execution_count": null,
    "metadata": {
     "id": "KCqi8thQT1f5"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The string function. \n",
+    "def string_length(input_string):\n",
+    "    # Initializing the variable. \n",
+    "    string_count = 0\n",
+    "    # Iterating over the string. \n",
+    "    for i in input_string:\n",
+    "        string_count += 1\n",
+    "    # Returning the string count. \n",
+    "    return string_count\n",
+    "\n",
+    "string_length('Hello!')"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": " **Question 5.** Write a function named max_number that takes two numbers as arguments and returns the maximum of the two. (10 Points)",
    "metadata": {
     "id": "7LgBX_7IT1m3"
-   }
+   },
+   "source": [
+    " **Question 5.** Write a function named max_number that takes two numbers as arguments and returns the maximum of the two. (10 Points)"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ],
+   "execution_count": null,
    "metadata": {
     "id": "nQpdYKsGT1s1"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "source": "**Question 6.**Write a function named count_down that takes a number as an argument and prints all numbers from the number down to 1. (10 Points)",
    "metadata": {
     "id": "jdYyDLMeT1zH"
-   }
+   },
+   "source": [
+    "**Question 6.**Write a function named count_down that takes a number as an argument and prints all numbers from the number down to 1. (10 Points)"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ],
+   "execution_count": null,
    "metadata": {
     "id": "9VW5OE7UT151"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "source": "**Question 7.** Write a function named multiply_list that takes a list of numbers as an argument and returns the product of all the numbers in the list. (10 Points)",
    "metadata": {
     "id": "mXKeymFkT1_1"
-   }
+   },
+   "source": [
+    "**Question 7.** Write a function named multiply_list that takes a list of numbers as an argument and returns the product of all the numbers in the list. (10 Points)"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ],
+   "execution_count": null,
    "metadata": {
     "id": "tzxsf5s7T2HQ"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyOH2Nx9Gsm/Jw89a333OrCg",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
