--- a/Homework/Christian_herrera_HW3.ipynb
+++ b/Homework/Christian_herrera_HW3.ipynb
@@ -232,12 +232,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "nQpdYKsGT1s1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def max_function(num_1, num_2):\n",
+    "    # Only one condition is needed. \n",
+    "    if num_1 > num_2:\n",
+    "        return num_1\n",
+    "    else:\n",
+    "        return num_2\n",
+    "    \n",
+    "max_function(1,4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,7 +275,10 @@
     "id": "9VW5OE7UT151"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def count_down(n):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
