--- a/Homework/Christian_herrera_HW3.ipynb
+++ b/Homework/Christian_herrera_HW3.ipynb
@@ -270,14 +270,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "9VW5OE7UT151"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "def count_down(n):\n",
-    "    "
+    "    while n > 0:\n",
+    "        print(n)\n",
+    "        n -= 1\n",
+    "    return None\n",
+    "\n",
+    "count_down(10)"
    ]
   },
   {
@@ -291,10 +313,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "tzxsf5s7T2HQ"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply_list(*args):\n",
+    "    \n",
+    "    index = 0\n",
+    "\n",
+    "    while index + 1 <= len(args):\n",
+    "        print(args[index])\n",
+    "        index += 1\n",
+    "\n",
+    "    return None\n",
+    "\n",
+    "multiply_list(1,4,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
