--- a/Homework/Christian_herrera_HW3.ipynb
+++ b/Homework/Christian_herrera_HW3.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "id": "W257oIJmT0z_"
    },
@@ -88,7 +88,7 @@
        "3"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {
     "id": "q0avuru9T1C-"
    },
@@ -124,7 +124,7 @@
        "27.5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {
     "id": "zgI6PKNlT1RI"
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "id": "KCqi8thQT1f5"
    },
@@ -202,7 +202,7 @@
        "6"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "metadata": {
     "id": "nQpdYKsGT1s1"
    },
@@ -243,7 +243,7 @@
        "4"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "id": "9VW5OE7UT151"
    },
@@ -294,6 +294,7 @@
    ],
    "source": [
     "def count_down(n):\n",
+    "    # I returned None here because the instructions as to print. \n",
     "    while n > 0:\n",
     "        print(n)\n",
     "        n -= 1\n",
@@ -313,33 +314,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "id": "tzxsf5s7T2HQ"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "4\n",
-      "2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def multiply_list(*args):\n",
+    "# This took a very long time. \n",
+    "def multiply_list(numbers):\n",
+    "    # The case for the last number. \n",
+    "    if len(numbers) == 0:\n",
+    "        return 1\n",
     "    \n",
-    "    index = 0\n",
+    "    first_number = numbers[0]\n",
+    "    remaining_numbers = numbers[1:]\n",
     "\n",
-    "    while index + 1 <= len(args):\n",
-    "        print(args[index])\n",
-    "        index += 1\n",
+    "    return first_number * multiply_list(remaining_numbers)\n",
     "\n",
-    "    return None\n",
+    "num_list = [1,2,3,4,5]\n",
     "\n",
-    "multiply_list(1,4,2)"
+    "multiply_list(num_list)"
    ]
   },
   {
