--- a/Homework/Christian_herrera_HW3.ipynb
+++ b/Homework/Christian_herrera_HW3.ipynb
@@ -331,7 +331,6 @@
     }
    ],
    "source": [
-    "# This took a very long time. \n",
     "def multiply_list(numbers):\n",
     "    # The case for the last number. \n",
     "    if len(numbers) == 0:\n",
@@ -339,20 +338,15 @@
     "    \n",
     "    first_number = numbers[0]\n",
     "    remaining_numbers = numbers[1:]\n",
-    "\n",
+    "    # This took a long time. \n",
     "    return first_number * multiply_list(remaining_numbers)\n",
     "\n",
+    "# Making the list. \n",
     "num_list = [1,2,3,4,5]\n",
     "\n",
+    "# Calling the function. \n",
     "multiply_list(num_list)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
