--- a/Labs/Herrera_Christian_Lab4.ipynb
+++ b/Labs/Herrera_Christian_Lab4.ipynb
@@ -85,13 +85,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "168f89d5",
       "metadata": {
         "id": "168f89d5"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You created the following values with your integer inputs of 5 and 44:\n",
+            " Sum: 49 \n",
+            "Subtract: -39 \n",
+            "Multiply: 220 \n",
+            "Divide: 0.11363636363636363 \n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "num_1 = int(input('Please input an integer for number one.'))\n",
+        "num_2 = int(input('Please input an integer for nummber two. '))\n",
+        "\n",
+        "add_nums = num_1 + num_2\n",
+        "subtract_nums = num_1 - num_2 \n",
+        "multiply_nums = num_1 * num_2\n",
+        "divide_nus = num_1 / num_2\n",
+        "\n",
+        "print(f'You created the following values with your integer inputs of {num_1} and {num_2}:\\n ' \\\n",
+        "f'Sum: {add_nums} \\n'\n",
+        "f'Subtract: {subtract_nums} \\n'\n",
+        "f'Multiply: {multiply_nums} \\n'\n",
+        "f'Divide: {divide_nus} \\n')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -115,13 +142,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "89c52481",
       "metadata": {
         "id": "89c52481"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Your input of -40.0 degrees Celsius is equal to -40.0 degrees Fahrenheit.\n"
+          ]
+        }
+      ],
+      "source": [
+        "celsius = float(input('Please input a temperature in Celsius. '))\n",
+        "fahrenheit = (celsius * 9/5) + 32\n",
+        "print(f'Your input of {celsius} degrees Celsius is equal to {fahrenheit} degrees Fahrenheit.')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -146,13 +185,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "35fcc84a",
       "metadata": {
         "id": "35fcc84a"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0, 3, 6, 9, 12, 15, 18]\n"
+          ]
+        }
+      ],
+      "source": [
+        "number_list = list(range(0, 21, 3))\n",
+        "print(number_list)\n",
+        "\n",
+        "# The expected output is [0, 3, 6, 9, 12, 15, 18] because the range \n",
+        "# function starts at 0 and adds 3 to get the next number until it \n",
+        "# reaches or exceeds 20."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -176,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "cG3Mxd8fdZFq",
       "metadata": {
         "id": "cG3Mxd8fdZFq"
@@ -199,13 +253,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "930498b9",
       "metadata": {
         "id": "930498b9"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['h', 'g', 'f', 'e', 'd', 'c', 'b', 'a']\n"
+          ]
+        }
+      ],
+      "source": [
+        "list1.reverse()\n",
+        "print(list1)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -229,13 +294,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "09fee821",
       "metadata": {
         "id": "09fee821"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['h', 'e', 'b']\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(list1[::3])"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,13 +327,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "9d26160c",
       "metadata": {
         "id": "9d26160c"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ]
+        }
+      ],
+      "source": [
+        "a = 5\n",
+        "b = 15\n",
+        "\n",
+        "if a > b:\n",
+        "    print(True)\n",
+        "else:    \n",
+        "    print(False)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -280,8 +371,18 @@
       "metadata": {
         "id": "76740c6b"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello Hello Hello Hello Hello \n"
+          ]
+        }
+      ],
+      "source": [
+        "print('Hello ' * 5)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -589,7 +690,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -603,7 +704,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
