--- a/Labs/Herrera_Christian_Lab4.ipynb
+++ b/Labs/Herrera_Christian_Lab4.ipynb
@@ -366,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "id": "76740c6b",
       "metadata": {
         "id": "76740c6b"
@@ -406,13 +406,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "id": "18e592df",
       "metadata": {
         "id": "18e592df"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "None\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_list = [5, 2, 8, 1, 10]\n",
+        "\n",
+        "my_list = my_list.sort()\n",
+        "\n",
+        "print(my_list)"
+      ]
     },
     {
       "cell_type": "markdown",
