--- a/Labs/Herrera_Christian_Lab4.ipynb
+++ b/Labs/Herrera_Christian_Lab4.ipynb
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "id": "168f89d5",
       "metadata": {
         "id": "168f89d5"
@@ -95,11 +95,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "You created the following values with your integer inputs of 5 and 44:\n",
-            " Sum: 49 \n",
-            "Subtract: -39 \n",
-            "Multiply: 220 \n",
-            "Divide: 0.11363636363636363 \n",
+            "You created the following values with your integer inputs of 4 and 4:\n",
+            " Sum: 8 \n",
+            "Subtract: 0 \n",
+            "Multiply: 16 \n",
+            "Divide: 1.0 \n",
             "\n"
           ]
         }
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 2,
       "id": "89c52481",
       "metadata": {
         "id": "89c52481"
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "id": "35fcc84a",
       "metadata": {
         "id": "35fcc84a"
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 4,
       "id": "cG3Mxd8fdZFq",
       "metadata": {
         "id": "cG3Mxd8fdZFq"
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 5,
       "id": "930498b9",
       "metadata": {
         "id": "930498b9"
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 6,
       "id": "09fee821",
       "metadata": {
         "id": "09fee821"
@@ -327,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 7,
       "id": "9d26160c",
       "metadata": {
         "id": "9d26160c"
@@ -366,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 8,
       "id": "76740c6b",
       "metadata": {
         "id": "76740c6b"
@@ -406,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 9,
       "id": "18e592df",
       "metadata": {
         "id": "18e592df"
@@ -416,14 +416,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "None\n"
+            "[1, 2, 5, 8, 10]\n"
           ]
         }
       ],
       "source": [
         "my_list = [5, 2, 8, 1, 10]\n",
         "\n",
-        "my_list = my_list.sort()\n",
+        "my_list.sort()\n",
         "\n",
         "print(my_list)"
       ]
@@ -452,13 +452,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "4be78a02",
       "metadata": {
         "id": "4be78a02"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['apple', 'banana', 'cherry']\n"
+          ]
+        }
+      ],
+      "source": [
+        "fruits = []\n",
+        "\n",
+        "fruits.append('apple')\n",
+        "fruits.append('banana')\n",
+        "fruits.append('cherry')\n",
+        "\n",
+        "print(fruits)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -486,13 +502,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "ae9d9133",
       "metadata": {
         "id": "ae9d9133"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 2]\n"
+          ]
+        }
+      ],
+      "source": [
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "\n",
+        "numbers.insert(10, 2)\n",
+        "\n",
+        "print(numbers)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -588,7 +618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "iRYucqnWzeSL",
       "metadata": {
         "id": "iRYucqnWzeSL"
@@ -631,7 +661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "zbKPA2FjzZ9p",
       "metadata": {
         "id": "zbKPA2FjzZ9p"
@@ -644,13 +674,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "iFoSe-Aiy1Oa",
       "metadata": {
         "id": "iFoSe-Aiy1Oa"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'Alice': 86.5, 'Bob': 73.5, 'Charlie': 92.0}\n"
+          ]
+        }
+      ],
+      "source": [
+        "def calculate_average_scores(student_scores_list):\n",
+        "    average_scores = {}\n",
+        "    for name, score in student_scores_list:\n",
+        "        if name in average_scores:\n",
+        "            average_scores[name].append(score)\n",
+        "        else:\n",
+        "            average_scores[name] = [score]\n",
+        "    for name in average_scores:\n",
+        "        average_scores[name] = sum(average_scores[name]) / int(2)\n",
+        "    return average_scores\n",
+        "\n",
+        "student_dict = calculate_average_scores(student_scores)\n",
+        "\n",
+        "print(student_dict)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -674,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "Gj9Zca4bzUEr",
       "metadata": {
         "id": "Gj9Zca4bzUEr"
