--- a/Labs/Herrera_Christian_Lab4.ipynb
+++ b/Labs/Herrera_Christian_Lab4.ipynb
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 45,
       "id": "168f89d5",
       "metadata": {
         "id": "168f89d5"
@@ -95,29 +95,32 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "You created the following values with your integer inputs of 4 and 4:\n",
-            " Sum: 8 \n",
-            "Subtract: 0 \n",
-            "Multiply: 16 \n",
-            "Divide: 1.0 \n",
+            "You created the following values with your integer inputs of 4 and 9:\n",
+            " Sum: 13 \n",
+            "Subtract: -5 \n",
+            "Multiply: 36 \n",
+            "Divide: 0.4444444444444444 \n",
             "\n"
           ]
         }
       ],
       "source": [
+        "# Ask the user for two whole numbers.\n",
         "num_1 = int(input('Please input an integer for number one.'))\n",
-        "num_2 = int(input('Please input an integer for nummber two. '))\n",
+        "num_2 = int(input('Please input an integer for nummber two that is not zero.'))\n",
         "\n",
+        "# Do the four basic arithmetic operations using the two inputs.\n",
         "add_nums = num_1 + num_2\n",
         "subtract_nums = num_1 - num_2 \n",
         "multiply_nums = num_1 * num_2\n",
-        "divide_nus = num_1 / num_2\n",
+        "divide_nus = num_1 / num_2  # This will explode if num_2 is 0.\n",
         "\n",
-        "print(f'You created the following values with your integer inputs of {num_1} and {num_2}:\\n ' \\\n",
-        "f'Sum: {add_nums} \\n'\n",
-        "f'Subtract: {subtract_nums} \\n'\n",
-        "f'Multiply: {multiply_nums} \\n'\n",
-        "f'Divide: {divide_nus} \\n')"
+        "# Summary of the results.\n",
+        "print(f'You created the following values with your integer inputs of {num_1} and {num_2}:\\n '\n",
+        "      f'Sum: {add_nums} \\n'\n",
+        "      f'Subtract: {subtract_nums} \\n'\n",
+        "      f'Multiply: {multiply_nums} \\n'\n",
+        "      f'Divide: {divide_nus} \\n')\n"
       ]
     },
     {
@@ -142,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 46,
       "id": "89c52481",
       "metadata": {
         "id": "89c52481"
@@ -157,9 +160,13 @@
         }
       ],
       "source": [
+        "# Grab a Celsius temp from the user (float so decimals work too).\n",
         "celsius = float(input('Please input a temperature in Celsius. '))\n",
+        "\n",
+        "# Convert Celsius to Fahrenheit using the standard formula.\n",
         "fahrenheit = (celsius * 9/5) + 32\n",
-        "print(f'Your input of {celsius} degrees Celsius is equal to {fahrenheit} degrees Fahrenheit.')"
+        "\n",
+        "print(f'Your input of {celsius} degrees Celsius is equal to {fahrenheit} degrees Fahrenheit.')\n"
       ]
     },
     {
@@ -185,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 47,
       "id": "35fcc84a",
       "metadata": {
         "id": "35fcc84a"
@@ -202,10 +209,7 @@
       "source": [
         "number_list = list(range(0, 21, 3))\n",
         "print(number_list)\n",
-        "\n",
-        "# The expected output is [0, 3, 6, 9, 12, 15, 18] because the range \n",
-        "# function starts at 0 and adds 3 to get the next number until it \n",
-        "# reaches or exceeds 20."
+        "# I received the expected output. "
       ]
     },
     {
@@ -230,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 48,
       "id": "cG3Mxd8fdZFq",
       "metadata": {
         "id": "cG3Mxd8fdZFq"
@@ -253,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 49,
       "id": "930498b9",
       "metadata": {
         "id": "930498b9"
@@ -268,6 +272,7 @@
         }
       ],
       "source": [
+        "# The reverse method. \n",
         "list1.reverse()\n",
         "print(list1)\n"
       ]
@@ -294,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 50,
       "id": "09fee821",
       "metadata": {
         "id": "09fee821"
@@ -309,6 +314,7 @@
         }
       ],
       "source": [
+        "# Skipping by three. \n",
         "print(list1[::3])"
       ]
     },
@@ -327,7 +333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 51,
       "id": "9d26160c",
       "metadata": {
         "id": "9d26160c"
@@ -345,10 +351,11 @@
         "a = 5\n",
         "b = 15\n",
         "\n",
+        "# Check if a is bigger than b and print the result.\n",
         "if a > b:\n",
         "    print(True)\n",
-        "else:    \n",
-        "    print(False)"
+        "else:\n",
+        "    print(False)\n"
       ]
     },
     {
@@ -366,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 52,
       "id": "76740c6b",
       "metadata": {
         "id": "76740c6b"
@@ -381,7 +388,7 @@
         }
       ],
       "source": [
-        "print('Hello ' * 5)"
+        "print('Hello ' * 5) # String multiplication. "
       ]
     },
     {
@@ -406,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 53,
       "id": "18e592df",
       "metadata": {
         "id": "18e592df"
@@ -421,8 +428,10 @@
         }
       ],
       "source": [
+        "# List of numbers. \n",
         "my_list = [5, 2, 8, 1, 10]\n",
         "\n",
+        "# Sort that list. \n",
         "my_list.sort()\n",
         "\n",
         "print(my_list)"
@@ -452,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 54,
       "id": "4be78a02",
       "metadata": {
         "id": "4be78a02"
@@ -467,8 +476,10 @@
         }
       ],
       "source": [
+        "# Empty list. \n",
         "fruits = []\n",
         "\n",
+        "# Our choice selection of fruits. \n",
         "fruits.append('apple')\n",
         "fruits.append('banana')\n",
         "fruits.append('cherry')\n",
@@ -502,7 +513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 55,
       "id": "ae9d9133",
       "metadata": {
         "id": "ae9d9133"
@@ -512,16 +523,19 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[1, 2, 3, 4, 5, 2]\n"
+            "[1, 2, 10, 3, 4, 5]\n"
           ]
         }
       ],
       "source": [
+        "# Create the list\n",
         "numbers = [1, 2, 3, 4, 5]\n",
         "\n",
-        "numbers.insert(10, 2)\n",
+        "# Insert 10 at index 2 (position 2)\n",
+        "numbers.insert(2, 10)\n",
         "\n",
-        "print(numbers)"
+        "# Print the modified list\n",
+        "print(numbers)\n"
       ]
     },
     {
@@ -550,13 +564,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "id": "a0eaba09",
       "metadata": {
         "id": "a0eaba09"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['apple', 'banana', 'orange']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create the list with four fruits.\n",
+        "my_list = [\"apple\", \"banana\", \"cherry\", \"orange\"]\n",
+        "\n",
+        "# Delete the element at index 2 (remember indexing starts at 0).\n",
+        "del my_list[2]\n",
+        "\n",
+        "# Print the updated list.\n",
+        "print(my_list)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -588,13 +619,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "id": "c4deedeb",
       "metadata": {
         "id": "c4deedeb"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[2, 3, 4]\n",
+            "['apple', 'grape', 'cherry', 'orange']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create the list of numbers.\n",
+        "my_list = [1, 2, 3, 4, 5]\n",
+        "\n",
+        "print(my_list[1:4])\n",
+        "\n",
+        "# Create the fruit list.\n",
+        "my_list = [\"apple\", \"banana\", \"cherry\", \"orange\"]\n",
+        "\n",
+        "# Replace the element at index 1.\n",
+        "my_list[1] = \"grape\"\n",
+        "\n",
+        "# Print the updated list.\n",
+        "print(my_list)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -618,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 58,
       "id": "iRYucqnWzeSL",
       "metadata": {
         "id": "iRYucqnWzeSL"
@@ -628,16 +682,6 @@
         "# Test the function\n",
         "scores = {'Alice': 85, 'Bob': 72, 'Charlie': 90, 'David': 88}"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "kAXro1VeyZjV",
-      "metadata": {
-        "id": "kAXro1VeyZjV"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -661,7 +705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 59,
       "id": "zbKPA2FjzZ9p",
       "metadata": {
         "id": "zbKPA2FjzZ9p"
@@ -674,7 +718,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 60,
       "id": "iFoSe-Aiy1Oa",
       "metadata": {
         "id": "iFoSe-Aiy1Oa"
@@ -690,19 +734,29 @@
       ],
       "source": [
         "def calculate_average_scores(student_scores_list):\n",
+        "    # Collect each student’s scores and organize by name.\n",
         "    average_scores = {}\n",
+        "\n",
+        "    # Loop through each (name, score) pair and group scores together.\n",
         "    for name, score in student_scores_list:\n",
         "        if name in average_scores:\n",
         "            average_scores[name].append(score)\n",
         "        else:\n",
         "            average_scores[name] = [score]\n",
+        "\n",
+        "    # Each student now has a list of scores, compute their average.\n",
+        "    # We assume each student has exactly 2 scores.\n",
         "    for name in average_scores:\n",
-        "        average_scores[name] = sum(average_scores[name]) / int(2)\n",
+        "        average_scores[name] = sum(average_scores[name]) / 2\n",
+        "\n",
         "    return average_scores\n",
         "\n",
+        "\n",
+        "# Run the function on the data.\n",
         "student_dict = calculate_average_scores(student_scores)\n",
         "\n",
-        "print(student_dict)"
+        "# Show the final dictionary of averages.\n",
+        "print(student_dict)\n"
       ]
     },
     {
@@ -727,7 +781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 61,
       "id": "Gj9Zca4bzUEr",
       "metadata": {
         "id": "Gj9Zca4bzUEr"
@@ -743,11 +797,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "id": "tnJs1I-sy_w7",
       "metadata": {
         "id": "tnJs1I-sy_w7"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Alice', 'Charlie', 'David']\n"
+          ]
+        }
+      ],
+      "source": [
+        "def students_above_threshold(student_scores_list, threshold=80):\n",
+        "    # Special students who pass all three,.\n",
+        "    passing_students = []\n",
+        "\n",
+        "    # Loop through each student and their tuple of scores.\n",
+        "    for name, scores in student_scores_list:\n",
+        "        \n",
+        "        # Check if all three subject scores are above the threshold.\n",
+        "        if scores[0] > threshold and scores[1] > threshold and scores[2] > threshold:\n",
+        "            passing_students.append(name)\n",
+        "\n",
+        "    return passing_students\n",
+        "\n",
+        "# Run function.\n",
+        "result = students_above_threshold(students_scores)\n",
+        "\n",
+        "print(result)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "785e5c6b",
+      "metadata": {},
       "outputs": [],
       "source": []
     }
