--- a/Feb 18, Classes.ipynb
+++ b/Feb 18, Classes.ipynb
@@ -11,7 +11,10 @@
     "    def __init__(self, color, brand, speed) -> None:\n",
     "        self.color = color\n",
     "        self.brand = brand\n",
-    "        self.speed = speed"
+    "        self.speed = speed\n",
+    "        self.fuel_level = 100\n",
+    "    \n",
+    "    def drive(self): # Simulates driving the car when called. \n"
    ]
   }
  ],
